; ModuleID = '/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson01/1/adkaster/src/extr_mini_uart.c_uart_send.c'
source_filename = "/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson01/1/adkaster/src/extr_mini_uart.c_uart_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AUX_MU_LSR_REG = common dso_local global i32 0, align 4
@AUX_MU_IO_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uart_send(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  br label %3

3:                                                ; preds = %1, %9
  %4 = load i32, i32* @AUX_MU_LSR_REG, align 4
  %5 = call i32 @get32(i32 %4)
  %6 = and i32 %5, 32
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %3
  br label %10

9:                                                ; preds = %3
  br label %3

10:                                               ; preds = %8
  %11 = load i32, i32* @AUX_MU_IO_REG, align 4
  %12 = load i8, i8* %2, align 1
  %13 = call i32 @put32(i32 %11, i8 signext %12)
  ret void
}

declare dso_local i32 @get32(i32) #1

declare dso_local i32 @put32(i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
